[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wave-graph-grammar-core"
version = "0.1.0"
description = "Wave-Graph Grammar-Core LLM prototype"
authors = [{name="Anurag Dongare"}]
requires-python = ">=3.9"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"